examples/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubescape
  namespace: kubescape
  labels:
    app: kubescape
spec:
  type: ClusterIP
  selector:
    app: kubescape
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
